# Orbit

./: .gitignore  BUILD_PLAN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: gen-dmg-bg.swift
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_add_timer_phase.sql
src/components/: FullScreenTimerView.tsx  SearchOverlay.tsx  TimerOverlay.tsx  UndoToast.tsx
src/components/editor/: NoteEditor.tsx
src/lib/: NoteParser.ts  db.ts
src/store/: notesStore.ts
src/tags/: TagRegistry.ts  index.ts
src/tags/list/: ListProcessor.ts
src/tags/math/: MathProcessor.ts  currency.ts
src/tags/timer/: TimerProcessor.ts  parseTimerArg.ts  timerEvents.ts  timerManager.ts
src/types/: index.ts
